# north-star-demo

./: .env.example  .gitignore  .gitleaksignore  CLAUDE.md  README.md  charter-section.md  north-star-agent-spec.md  north-star-backend-spec.md  north-star-braintrust-plan.md  north-star-business-goals.md  north-star-charter.md  north-star-dataset.json  north-star-eval-results-01.json  north-star-eval-results.json  north-star-eval.py  north-star-frontend-spec.md  north-star-judge-prompt.md  north-star-langfuse-plan.md  north-star-user-stories.md  north-star-website-copy.md  package-lock.json
.claude/: launch.json
.claude/plans/: twinkling-purring-ripple.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-md-staleness.yml  keep-alive.yml  secrets.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: agent.py  agent_task.py  contracts.py  db.py  deploy.py  embeddings.py  eval_runner.py  feature_flags.py  improve_loop.py  llm_cache.py  main.py  models.py  online_scorers.py  orchestrator.py  polaris_tools.py  prod_log.py  prompt.py  prompt_eval.py  provider_fallback.py  quota.py  references.py  runner.py  runner_container_client.py  scorer_publish.py  sharing.py  spend_cap.py  tools.py  training_corpus.py
backend/app/samples/: __init__.py  expense_reconciliation.py  investor_memo.py  invoice_dispute.py  standup_notes.py
backend/app/samples/skills/: expense_reconciliation.md  investor_memo.md  invoice_dispute.md  standup_notes.md
backend/app/scorers/: charter_quality.md  conversation_quality.md  evaluate_goals_quality.md  goal_extraction_quality.md  seed_quality.md  skill_import_quality.md  skill_seed_quality.md  suggest_goals_quality.md  suggest_stories_quality.md
backend/north_star.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/runner_container/: Dockerfile  README.md  docker-compose.yml  package.json  server.ts  tsconfig.json
backend/scripts/: backfill_prompt_eval_turns.py
backend/tests/: test_agent_task.py  test_embeddings.py  test_eval_runner_local.py  test_generate_scorers_prompt.py  test_knn_scorer.py  test_parsers.py  test_provider_fallback.py  test_references.py  test_samples.py  test_scorer_publish.py  test_spend_cap.py  test_training_corpus.py
docs/: autoresearch-integration.md  dataset-spec.md  eval-runner.md  fork-plan.md  future.md  process.md  quick-demo-plan.md  session-summary.md  tier2-b1-knn-scorer.md  tier3a-training-data-capture.md
evals/: README.md  _smoke_test.py  requirements.txt  run_eval.py
frontend/: package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  (+1 more)
research/: 2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-05-30.md  2026-05-31.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-06.md  2026-06-07.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  INDEX.md
scripts/: export_training_corpus.py  generate_judge_corpus.py  link-worktree-venv.sh  measure_parsing_hit_rate.py
(+103 files in other folders)
