[project]
name = "north-star"
version = "0.1.0"
description = "Charter generation agent — eval-driven development platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "braintrust>=0.0.180",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["north_star.egg-info", ".venv"]

[tool.ruff.lint]
# Default rules (E, F) plus pycodestyle warnings. Keep this tight —
# broader rule families like isort (I) need a one-time cleanup pass first.
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long — line-length is advisory, not enforced
]

