[project]
name = "north-star"
version = "0.1.0"
description = "Charter generation agent — eval-driven development platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "anthropic>=0.40.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "braintrust>=0.0.180",
]

[tool.setuptools.packages.find]
# Without this, setuptools' flat-layout auto-discovery sees both ``app/``
# (the Python service) and ``runner_container/`` (a sibling Docker service:
# Dockerfile + server.ts) as top-level packages and refuses to build with
# "Multiple top-level packages discovered in a flat-layout". Be explicit:
# the published Python package is ``app`` (plus its subpackages), nothing
# else. ``runner_container`` is not a Python module — it's just a service
# sitting under ``backend/`` for proximity to the code that calls it.
where = ["."]
include = ["app*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Lets us write `async def test_*` without per-test markers when async
# tests show up later (none today).
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["north_star.egg-info", ".venv"]

[tool.ruff.lint]
# Default rules (E, F) plus pycodestyle warnings. Keep this tight —
# broader rule families like isort (I) need a one-time cleanup pass first.
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long — line-length is advisory, not enforced
]

